# nmd-core

./: Cargo.toml  DEVELOP.md  NMD.md  README.md
benches/: loading_dossier_benchmark.rs
images/: nmd-lifecycle.drawio
src/: _compilation_configuration.rs  _compiler.rs  artifact.rs  assembler.rs  bibliography.rs  codex.rs  compilable_text.rs  compilation.rs  compiler.rs  constants.rs  content_bundle.rs  dossier.rs  lib.rs  load.rs  load_block.rs  loader.rs  main.rs  resource.rs  table_of_contents.rs  theme.rs  utility.rs
src/artifact/: artifact_assets.rs  artifacts_collection.rs
src/assembler/: assembler_configuration.rs  html_assembler.rs
src/assembler/html_assembler/: html_assembler_configuration.rs
src/codex/: modifier.rs
src/codex/modifier/: base_modifier.rs  (+5 more)
src/compilable_text/: compilable_text_part.rs
src/compilation/: compilable.rs  compilation_configuration.rs  compilation_error.rs  compilation_outcome.rs  compiled_text_accessor.rs  content_bundle.rs  self_compile.rs
src/compiler/: compilable.rs  compilation_configuration.rs  compilation_error.rs  compilation_metadata.rs  compilation_result.rs  compilation_rule.rs  compiled_text_accessor.rs  content_bundle.rs  self_compile.rs
src/dossier/: document.rs  dossier_configuration.rs
src/loader/: block.rs  load_block.rs  loader_configuration.rs  paragraph_content_loading_rule.rs  paragraph_loading_rule.rs
src/resource/: bucket.rs  image_resource.rs  remote_resource.rs  resource_reference.rs  source.rs  table.rs
src/utility/: image_utility.rs  nmd_unique_identifier.rs  text_utility.rs
(+78 files in other folders)
