[package]
name = "nmd-core"
version = "0.38.0"
authors = ["Nicola Ricciardi"]
edition = "2021"
description = "Official NMD compiler"
readme = "README.md"
repository = "https://github.com/nricciardi/nmd-core"
license-file = "LICENSE"
keywords = ["compiler", "nmd", "markdown"]
exclude = [
    "test-resources/*",
    "logo/*",
    "doc/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.75"
base64 = "0.21.5"
build_html = "2.5.0"
env_logger = "0.10.1"
getset = "0.1.2"
infer = "0.16.0"
log = "0.4.20"
once_cell = "1.19.0"
oxipng = { version = "9.1.1", features = ["parallel"]}
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
simple_logger = "4.3.3"
thiserror = "1.0.50"
url = "2.5.0"

[profile.profiling]
inherits = "release"
debug = true
